@@ -1,5 +1,6 @@
 From version 0.7.5 to 0.8.0
 - uses ucommon 2.1
+- added notify plugin to use libnotify
 
 From version 0.7.4 to 0.7.5
 - fix init script and defaults
